# DataHarmonisation_Agriculture

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Data_Harmo_dbt/: .user.yml  dbt_project.yml  dev.duckdb  profiles.yml
Data_Harmo_dbt/models/marts/: mart_alignments.sql
Data_Harmo_dbt/models/staging/: stg_agrovoc.sql  stg_dephy.sql
Data_Harmo_dbt/seeds/: llm_pdf_extracts.csv  llm_synonyms.csv
airflow/dags/: dag_llm_pdf_extract.py  dag_llm_synonyms.py  gaia_pipeline.py
datalake/enriched/biocontrol/alignments/20260222/: part-00001.parquet
datalake/enriched/biocontrol/alignments/20260227/: part-00001.parquet
kibana/: kibana_phytolex_export.ndjson
pipeline/enrichment/: llm_synonym_mapping.py  llm_synonyms_output.json
pipeline/export/: export_parquet.py
pipeline/formatting/: normalize_agrovoc.py  normalize_dephy.py
pipeline/indexing/: index_alignments.py
pipeline/ingestion/: fetch_agrovoc.py  index_dephy_methodes.py  llm_pdf_extract.py
